fixed body height overflow error

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* ===== Scrollbar CSS ===== */
